--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -1,7 +1,7 @@
 {{outlet "showtask"}}
 
 
-
+  <div class="container-fluid">
 {{#if isExpanded}}
 
 {{else}}
@@ -12,19 +12,40 @@
 
 
   {{#each model as |task|}}
-  <div class="container">
-  
+
+
   <div class="col-xs-4 col-sm-4 col-md-4">
   	
 
-    <span {{action "toggleBody"}}><p><b>{{#link-to "tasks.show" task}}{{task.title}}{{/link-to}}</b></p></span>
+    <p>
+    	<b>
+    		<span {{action "toggleBody"}}>
+    		{{#link-to "tasks.show" task}} 
+
+    		{{task.title}} 
+
+    		{{/link-to}}
+    		</span>
+    		    		{{#if (equals task.status 4)}}
+    		<span class="label label-info">New</span>
+    		{{else if (equals task.status 1)}}
+    		<span class="label label-success">Started</span>
+    		{{else if (equals task.status 2)}}
+    		<span class="label label-danger">Ended</span>
+    		
+    		{{else if (equals task.status 3)}}
+    		<span class="label label-warning">Paused</span>
+    		{{/if}}
+    		
+    		<span class="badge">{{task.time_elapsed}}</span>
+    		</b>
+    	</p>
     
     <li>ID: {{task.id}}</li>
-    <li>Owner: {{task.user}}</li>
-    <li>Status: {{task.status}}</li>
+    <li>Owner: <a href={{task.user}}>user profile</a></li>
+
     <li>Created: {{task.created_at}}</li>
-    <li>Elapsed: {{task.time_elapsed}}</li>
-    <li>Completed: {{task.is_complete}}</li>
+
    
    <div class="btn-group">
   <button type="button" class="btn btn-default">start/pause</button>
@@ -39,7 +60,9 @@
     
 
     </div>
-    </div>
+
+
+
 	{{else}}
 	Sorry, nobody is here.
   {{/each}}
@@ -47,7 +70,7 @@
 
 
 {{/if}}
-
+    </div>
 {{outlet}}
 
 
